--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             </div>
             <div>
                 <h5 class="font-bold text-lg">Wallet: $<span id="wallet-amount">{{ wallet }}</span></h5>
-                <h5 class="font-bold text-lg">Net Gain: $+<span id="net-gain">{{ net_gain }}</span>%</h5>
+                <h5 class="font-bold text-lg">Net Gain: <span id="net-gain">{{ net_gain }}</span>%</h5>
             </div>
             <div>
                 <div class="text-xl font-bold" id="day-display" >Day 1</div>
@@ -103,7 +103,7 @@
 
     </div>
      <!-- Instructions Modal -->
-     <div id="instructionsModal" class="modal hidden">
+     <div id="instructionsModal" class="justify-center modal hidden">
         <div class="modal-content">
             <span class="close" id="startGame">&times;</span>
             <h2>Welcome to Five Nights at Wall Street!</h2>
@@ -128,6 +128,21 @@
             <p>Good luck, trader!</p>
         </div>
     </div>
+    <div id = "gameOverModal" class = "justify-center modal hidden">
+        <div class="modal-content">
+            <span class="close2">&times;</span>
+            <h2>Game Over!</h2>
+            <br></br>
+            <h3>Final Results:</h3>
+            <ul>
+                <li>Your final wallet balance is: $<span id="wallet-amount">{{ wallet }}</span></li>
+                <li>Your net gain is: <span id="net-gain">{{ net_gain }}</span>%</li>
+                <li>This data was from {{ big_data[0][0] }} for the week of {{ first_day }}</li>
+            </ul>
+            <br></br>
+            <h3>Thank you for playing Five Nights at Wall Street!</h3>
+            <p>Want to play again? Refresh the page to begin a new round!</p>
+        </div>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script>
@@ -207,7 +222,7 @@
                     data: []
                 }],
                 tooltip: {
-                    enabled: false  // Enable tooltips
+                    enabled: false  // Disable tooltips
                 },
                 plotOptions: {
                     series: {
@@ -248,7 +263,7 @@
                             series: {
                                 states: {
                                     hover: {
-                                        enabled: true  // Disable hover effects initially
+                                        enabled: true  // Renable hover effects
                                     }
                                 }
                             }
@@ -286,6 +301,13 @@
                 runGraph();
             
             } else {
+                document.getElementById('gameOverModal').style.display = "block";
+                document.getElementById('gameOverModal').classList.remove('hidden');
+
+                document.getElementById('switchDayButton').disabled = true;
+                document.getElementById('switchDayButton').style.cursor = "not-allowed";
+                document.getElementById('switchDayButton').style.opacity = "0.5";
+
                 alert("You've viewed all days."); // Optionally, loop back to the first day or disable the button
             }
         });
@@ -306,7 +328,49 @@
    
 
     <!-- Link to your custom JavaScript file -->
-    <script src="../static/js/modalLogic.js"></script>
+    <script>
+        window.onload = function() {
+            // Show the modal on page load
+            const modal = document.getElementById('instructionsModal');
+            modal.classList.replace('hidden', 'show');
+        
+            // Get the <span> element that closes the modal
+            const span = document.getElementsByClassName("close")[0];
+        
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+                modal.classList.replace('show', 'hidden');
+            }
+        
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+                if (event.target == modal)
+                    modal.classList.replace('show', 'hidden');
+            }
+        }
+    </script>
+    <script>
+
+        // Show the modal on page load
+        const modal2 = document.getElementById('gameOverModal');
+        // modal.classList.replace('hidden', 'show');
+
+        // Get the <span> element that closes the modal
+        const span2 = document.getElementsByClassName("close2")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span2.onclick = function() {
+            modal2.classList.replace('show', 'hidden');
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal2)
+                modal2.classList.replace('show', 'hidden');
+        }
+    
+
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
@@ -376,6 +440,24 @@
         $('input[name="asset1"]').on('input', function() {
             $(this).removeClass('error-animation');
             $('#error-display1').text('');
+        });
+        $('.btn').on('click', function() {
+            $('input[name="asset1"]').removeClass('error-animation');
+            $('#error-display1').text('');
+        });
+        $('#net-gain').on('DOMSubtreeModified', function() {
+            if (parseFloat($(this).text()) < 0) {
+                $(this).css('color', 'red');
+            } else {
+                $(this).css('color', 'green');
+            }
+        });
+        $('#wallet-amount').on('DOMSubtreeModified', function() {
+            if (parseFloat($(this).text()) < 10000) {
+                $(this).css('color', 'red');
+            } else {
+                $(this).css('color', 'green');
+            }
         });
         </script>
     
