--- a/templates/index3.html
+++ b/templates/index3.html
@@ -25,7 +25,7 @@
                 <h5 class="font-bold text-lg">Net Gain: <span id="net-gain">{{ net_gain }}</span>%</h5>
             </div>
             <div>
-                <div class="text-xl font-bold text-green-700 align-middle" id="day-display">Day 1</div>
+                <div class="text-xl font-bold text-gray-300 align-middle pt-3.5" id="day-display">Day 1</div>
             </div>
             <div class="text-center my-4">
                 <button id="switchDayButton" class="bg-gradient-to-r from-green-500 to-green-700 hover:bg-green-300 text-white font-bold py-2 px-4 rounded">
